@@ -66,6 +66,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #24259: tarfile now raises a ReadError if an archive is truncated
+  inside a data segment.
+
 - Issue #24552: Fix use after free in an error case of the _pickle module.
 
 - Issue #24514: tarfile now tolerates number fields consisting of only
